# blazer

./: README.md  blazer.py  config.json  pyproject.toml
.github/workflows/: build.yml
