[project]
name = "blazer"
version = "0.1.5"
description = "A way to track anything productivity and keep you coming back for more, you can see what youve been working on with specific repos, just like github"
authors = [{name = "Alex G"}]
requires-python = ">=3"
dependencies = ["pygame"]

[project.scripts]
blzr = "blazer:main"
